# markup-language

./: .gitignore  CMakeLists.txt  Jenkinsfile
include/: HtmlLanguage.h  INIConfig.h  MarkupLanguage.h  StringBuilder.h  Version.h  Version.template  XmlLanguage.h
src/: HtmlLanguage.cpp  INIConfig.cpp  MarkupLanguage.cpp  StringBuilder.cpp  XmlLanguage.cpp  main.cpp
test/: HtmlLanguage.cpp  INIConfig.cpp  XmlLanguage.cpp  main-test.cpp
